--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/c9cf10949e.js" crossorigin="anonymous"></script>
     <title>Movie App</title>
   </head>
   <body>
